--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-md bg-body-tertiary">
+    <nav class="navbar navbar-expand-md bg-black navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Meteora</a>
+            <a class="navbar-brand" href="#"><h1 class="m-0"><img class="d-block" src="./assets/logo-meteora.png" alt="Logo da loja Meteora"></h1></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -40,8 +40,8 @@
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Digite o produto" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    <input class="form-control me-2 rounded-0" type="search" placeholder="Digite o produto" aria-label="Search">
+                    <button class="btn btn-outline-light rounded-0" type="submit">Buscar</button>
                 </form>
             </div>
         </div>
@@ -123,7 +123,7 @@
                     <rect width="100%" height="100%" fill="#868e96"></rect>
                     <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
                 </svg>
-                <div class="card-header">
+                <div class="card-header bg-black text-bg-dark">
                     <p class="text-center">
                         Categoria
                     </p>
@@ -139,7 +139,7 @@
                     <rect width="100%" height="100%" fill="#868e96"></rect>
                     <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
                 </svg>
-                <div class="card-header">
+                <div class="card-header bg-black text-bg-dark">
                     <p class="text-center">
                         Categoria
                     </p>
@@ -155,7 +155,7 @@
                     <rect width="100%" height="100%" fill="#868e96"></rect>
                     <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
                 </svg>
-                <div class="card-header">
+                <div class="card-header bg-black text-bg-dark">
                     <p class="text-center">
                         Categoria
                     </p>
@@ -171,7 +171,7 @@
                     <rect width="100%" height="100%" fill="#868e96"></rect>
                     <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
                 </svg>
-                <div class="card-header">
+                <div class="card-header bg-black text-bg-dark">
                     <p class="text-center">
                         Categoria
                     </p>
@@ -187,7 +187,7 @@
                     <rect width="100%" height="100%" fill="#868e96"></rect>
                     <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
                 </svg>
-                <div class="card-header">
+                <div class="card-header bg-black text-bg-dark">
                     <p class="text-center">
                         Categoria
                     </p>
@@ -203,7 +203,7 @@
                     <rect width="100%" height="100%" fill="#868e96"></rect>
                     <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
                 </svg>
-                <div class="card-header">
+                <div class="card-header bg-black text-bg-dark">
                     <p class="text-center">
                         Categoria
                     </p>
@@ -233,7 +233,7 @@
                         bulk of the card's content.
                     </p>
                     <p>R$ 30,00</p>
-                    <a href="#" class="btn btn-primary">Ver mais</a>
+                    <a href="#" class="btn btn-primary botao-lilas rounded-0 border-0">Ver mais</a>
                 </div>
             </div>
         </div>
@@ -254,7 +254,7 @@
                         bulk of the card's content.
                     </p>
                     <p>R$ 30,00</p>
-                    <a href="#" class="btn btn-primary">Ver mais</a>
+                    <a href="#" class="btn btn-primary botao-lilas rounded-0 border-0">Ver mais</a>
                 </div>
             </div>
         </div>
@@ -275,7 +275,7 @@
                         bulk of the card's content.
                     </p>
                     <p>R$ 30,00</p>
-                    <a href="#" class="btn btn-primary">Ver mais</a>
+                    <a href="#" class="btn btn-primary botao-lilas rounded-0 border-0">Ver mais</a>
                 </div>
             </div>
         </div>
@@ -296,7 +296,7 @@
                         bulk of the card's content.
                     </p>
                     <p>R$ 30,00</p>
-                    <a href="#" class="btn btn-primary">Ver mais</a>
+                    <a href="#" class="btn btn-primary botao-lilas rounded-0 border-0">Ver mais</a>
                 </div>
             </div>
         </div>
@@ -317,7 +317,7 @@
                         bulk of the card's content.
                     </p>
                     <p>R$ 30,00</p>
-                    <a href="#" class="btn btn-primary">Ver mais</a>
+                    <a href="#" class="btn btn-primary botao-lilas rounded-0 border-0">Ver mais</a>
                 </div>
             </div>
         </div>
@@ -338,23 +338,23 @@
                         bulk of the card's content.
                     </p>
                     <p>R$ 30,00</p>
-                    <a href="#" class="btn btn-primary">Ver mais</a>
+                    <a href="#" class="btn btn-primary botao-lilas rounded-0 border-0">Ver mais</a>
                 </div>
             </div>
         </div>
 
     </div>
 
-    <section class="pb-4">
+    <section class="pb-4 bg-black text-bg-dark">
 
-        <h2 class="text-center">Conheça todas as nossas facilidades</h2>
+        <h2 class="text-center py-3">Conheça todas as nossas facilidades</h2>
 
         <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center gap-3 px-3">
             <div class="d-flex flex-column align-items-center">
                 <div class="divs-facilidades d-flex">
-                    <div><i class="bi bi-x-diamond fs-1"></i></div>
+                    <div><i class="verde-limao bi bi-x-diamond fs-1"></i></div>
                     <div>
-                        <div class="ms-3 mb-1">PAGUE PELO PIX</div>
+                        <div class="ms-3 mb-1 verde-limao">PAGUE PELO PIX</div>
                         <div class="texto-menor ms-3">Ganha 5% OFF em
                             pagamentos via PIX
                         </div>
@@ -362,17 +362,17 @@
                 </div>
 
                 <div class="divs-facilidades d-flex">
-                    <div><i class="bi bi-arrow-repeat fs-1"></i></div>
+                    <div><i class="verde-limao bi bi-arrow-repeat fs-1"></i></div>
                     <div>
-                        <div class="ms-3 mb-1">TROCA GRÁTIS</div>
+                        <div class="ms-3 mb-1 verde-limao">TROCA GRÁTIS</div>
                         <div class="texto-menor ms-3">Fique livre para trocar em até 30 dias.</div>
                     </div>
                 </div>
 
                 <div class="divs-facilidades d-flex">
-                    <div><i class="bi bi-flower1 fs-1"></i></div>
+                    <div><i class="verde-limao bi bi-flower1 fs-1"></i></div>
                     <div>
-                        <div class="ms-3 mb-1">SUSTENTABILIDADE</div>
+                        <div class="ms-3 mb-1 verde-limao">SUSTENTABILIDADE</div>
                         <div class="texto-menor ms-3">Moda responsável que respeita o meio ambiente.</div>
                     </div>
                 </div>
@@ -390,8 +390,8 @@
         </div>
     </form>
 
-<footer class="text-center">
-    <p class="py-3">2023 <i class="bi bi-c-circle"></i> Desenvolvido por Alura | Projeto fictício sem fins comerciais.</p>
+<footer class="text-center bg-black text-bg-dark">
+    <p class="card-text py-3">2023 <i class="bi bi-c-circle"></i> Desenvolvido por Alura | Projeto fictício sem fins comerciais.</p>
 </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
